0.6.10:
- new option (-I) in partimaged to bind it to a network interface (Alfredo Andrés Omella)

0.6.9 (2010-07-25):
- applied modifications by Vadim S. (vvs1@slackware.ru)
- applied patch nvieville_server_closenowait_clients_number.patch from Nicolas Vieville
- applied patch nvieville_filesel_NEWT_FLAG_SCROLL.patch from Nicolas Vieville
- applied patch partimage-0.6.7-chown.patch from mandriva (on Makefile.am)
- applied patch partimage-0.6.8-format-security.patch from mandriva
- applied patches from Nicolas Vieville to fix compilation warnings with gcc-4.4 / glibc-2.10
- applied patches from Nicolas Vieville to improve internationalisation (mostly on partimaged)
- applied patches from Nicolas Vieville to free ressources in netclient (fixes memory leaks)
- applied patches from Nicolas Vieville to fix issues with openssl-1.0.0
- allow different versions to connect as long as they use the same protocol and ssl/login options

0.6.8 (2009-09-24):
- applied ufs patch from Reyk Floeter the patch fixes UFS mode (tested with OpenBSD FFS1 partitions). 
  the fsbtodb() macro is the standard way to get the CG offset, see dumpfs(8) on the BSD of your choice.
- Applied patch from gentoo: https://bugs.gentoo.org/show_bug.cgi?id=159556
- Applied patch from fedora: partimage-0.6.7-gcc44.patch
- Applied patch from mandriva: partimage-0.6.7-inttypes.patch
- Applied patch from mandriva: partimage-0.6.7-set-effective-gid.patch
- Applied patch from mandriva: partimage-0.6.7-setegid.patch
- Applied patches from mandriva: nologin and nossl
- Added support for devmapper entries found in /proc/partitions
- Applied patch from mandriva: partimage-0.6.7-save_file_and_rest_file_actions.patch

0.6.7 (2008-02-03):
- applied amd64 patch from Andre Przywara
- applied ext2/ext3 patch from the clonezilla team (Thomas Tsai) that fixes a bug when the "blocks per group" in ext2/ext3 is not 32768
- applied dont-discard-error-message-in-batch-mode.patch
- applied gui.diff